# folkung

./: Makefile  folkung.cabal
Haskell/: Clausify.hs  Flags.hs  Folkung.hs  Output.hs  ParseProblem.hs  Parsek.hs  Sat.hs  Timeout.hs
Haskell/Equinox/: ConSat.hs  FolSat.hs  Solve.hs  TermSat.hs
Haskell/Paradox/: AnalysisTypes.hs  Flatten.hs  Instantiate.hs  Solve.hs  SolveInstances.hs
equinox/: equinox.cabal  equinox.hs
instantiate/: Makefile
minisat/current-base/: Makefile  Prop.cpp  Solver.cpp
minisat/mtl/: template.mk
paradox/: paradox.cabal  paradox.hs
