Name: paradox
Version: 2.3
Cabal-Version: >= 1.2
License: OtherLicense
License-file: LICENSE
Copyright: 
  Paradox/Equinox: 2003-2007, Koen Claessen, Niklas Sorensson
  Minisat: 2003-2005, Niklas Een, Niklas Sorensson
Synopsis: 
Description:
Build-Type: Simple

Executable paradox
  Build-depends: base, folkung
  Main-is: paradox.hs
